--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = The LeetCode Begginers Guide Running Sum of 1D Array
+PRODUCT_NAME = Running Sum of 1D Array
 
 // The application's bundle identifier
 PRODUCT_BUNDLE_IDENTIFIER = com.SuperforecastingIT.theleetcodebegginersguiderunningsumof1darray
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 The LeetCode Begginers Guide Running Sum of 1D Array. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 Running Sum of 1D Array. All rights reserved.
